<resources>

    <string name="app_name">duck-z</string>
    <string name="duck_z">duck-z</string>

    <string name="close_back_pressed">뒤로가기를 한번 더 누르면 앱이 종료됩니다</string>

    <string name="write_create_diary">다이어리 생성</string>
    <string name="write_add_sticker">스티커 추가</string>
    <string name="write_hint_title">제목을 입력하세요</string>
    <string name="write_hint_content">여기를 눌러 다이어리를 작성해보세요!</string>
    <string name="write_delivery">전달</string>
    <string name="write_my_sticker_list">내 스티커 목록</string>
    <string name="write_select_title">사진 선택</string>
    <string name="write_select_album">사진 앨범</string>
    <string name="write_select_camera">카메라</string>
    <string name="write_select_color">단색</string>
    <string name="write_select_color_title">단색 선택</string>
    <string name="write_sticker_title">내 스티커 목록</string>
    <string name="write_save">저장</string>
    <string name="write_exit_title">나가기</string>
    <string name="write_exit_content">일기를 전달하지 않고 나갈시,\n작성한 내용은 저장되지 않습니다.</string>
    <string name="write_exit_cancel">취소</string>
    <string name="write_exit_exit">나가기</string>
    <string name="write_load_image_fail">이미지를 불러오는데 실패하였습니다.</string>
    <string name="write_toast_camera_deny">사진 촬영을 위해 카메라 권한이 필요합니다</string>
    <string name="write_dialog_camera_deny_forever">사진 촬영을 위해 카메라 권한이 필요합니다.\n앱 설정 > 권한 탭에서 카메라 권한을 허용해주세요.</string>
    <string name="write_dialog_permission_confirm">허용하기</string>
    <string name="write_dialog_title_camera_deny_forever">권한 없음</string>
    <string name="write_failure_post">일기 작성에 실패했습니다. 잠시 후 다시 시도해주세요</string>
    <string name="write_sticker_alert_no_content">사진이나 단색을 먼저 입력해주세요</string>

    <string name="diary_your_turn">Your turn!</string>
    <string name="diary_empty">작성한 일기가 없습니다. 😥</string>

    <string name="crop_title">수정</string>
    <string name="crop_finish">완료</string>
    <string name="crop_image_cancel_dialog_title">편집 취소</string>
    <string name="crop_image_cancel_dialog_content">편집한 내용을 적용하지 않고 나가시겠습니까?</string>
    <string name="crop_image_cancel_dialog_ok">확인</string>

    <string name="by">by&#160;</string>

    <string name="write_unmodifiable_image_dialog_message">수정시, 부착한 스티커와 사진 모두\n리셋 됩니다. 그래도 편집하시겠습니까?</string>
    <string name="modify_image">편집하기</string>

    <!--    일기장-->
    <string name="book_list_title">%s님의\n교환일기장 목록</string>
    <string name="create_book_title">일기장 만들기</string>
    <string name="create_book_section_title">일기장 표지 꾸미기</string>
    <string name="update_book_section_title">일기장 표지 수정</string>
    <string name="member_setting_section_title">멤버 관리</string>
    <string name="leave_book_section_title">일기장 나가기</string>
    <string name="leave_book_message">일기장을 나가시겠습니까?</string>
    <string name="create">생성</string>
    <string name="update">수정</string>
    <string name="cover_color">표지색상</string>
    <string name="book_list_author">%s 작성중</string>
    <string name="create_book_exit_content">작성중인 내용은 저장되지 않습니다.</string>
    <string name="book_list_writing">&#160;작성중</string>
    <string name="title_for_book_setting">일기장 설정</string>
    <string name="create_code_and_invite_friend">코드 생성하여 친구 초대하기</string>
    <string name="sticker_reset_title">스티커 수정</string>
    <string name="sticker_reset_message">스티커 수정시, 현재 스티커는 리셋됩니다.\n그래도 수정하시겠습니까?</string>
    <string name="book_empty">시작한 교환일기가 없습니다. 😥</string>

    <!--    로그인-->
    <string name="kakao_login">카카오톡으로 시작하기</string>
    <string name="google_login">구글로 시작하기</string>

    <!-- 마이페이지 -->
    <string name="cancel">취소</string>
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_name_label">이름</string>
    <string name="mypage_name_edit">편집</string>
    <string name="mypage_signup_label">가입 sns</string>
    <string name="mypage_signup_date">가입일</string>
    <string name="mypage_invite_code_label">초대 코드 입력하기</string>
    <string name="mypage_invite_code_hint">초대 코드를 입력해주세요</string>
    <string name="mypage_confirm">완료</string>
    <string name="mypage_service_label">서비스 정보</string>
    <string name="mypage_current_version">앱 현재 버전</string>
    <string name="mypage_makers">만든이</string>
    <string name="mypage_open_source">Open Source License</string>
    <string name="mypage_cs_label">사용자 지원</string>
    <string name="mypage_cs">문의하기</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_logout_message">정말 로그아웃 하시겠습니까?</string>
    <string name="mypage_leave">회원탈퇴</string>
    <string name="mypage_leave_message">회원탈퇴 시, 저장한 정보는 삭제됩니다.</string>
    <string name="mypage_leave_confirm">탈퇴하기</string>
    <string name="mypage_sponsor">후원하기</string>

    <string name="mypage_makers_label">Duck-z 만든 사람들</string>

    <string name="mypage_name_edit_label">이름 변경</string>
    <string name="mypage_name_edit_hint">변경할 닉네임을 입력해주세요</string>
    <string name="save">저장</string>
    <string name="edit">수정하기</string>

    <string name="default_notification_channel_id">duck-z</string>
    <string name="fcm_new_diary">새로운 일기가 등록되었어요!</string>

    <string name="mypage_term_service_label">서비스 이용약관</string>
    <string name="mypage_term_privacy_label">개인정보처리방침</string>

    <string name="diary_detail_edit_not_available">일기장 수정은 작성 후 30분 내에만 가능해요!</string>

    <string name="comment_title">댓글</string>
    <string name="comment_no_comment">작성된 댓글이 없습니다.\n첫번째 댓글을 남겨보세요!</string>
    <string name="comment_hint">댓글을 남겨보세요</string>
    <string name="comment_send">등록</string>
    <string name="comment_delete_dialog_title">댓글 삭제</string>
    <string name="comment_delete_dialog_content">해당 댓글을 삭제하시겠습니까?\n삭제한 댓글은 되돌릴 수 없습니다.</string>
    <string name="comment_delete_dialog_positive">삭제하기</string>
    <string name="comment_replying">%s님께 댓글 남기는 중</string>
    <string name="comment_deleted">삭제된 댓글입니다.</string>
    <string name="comment_reply_button">답글달기</string>
    <string name="comment_delete_button">삭제</string>

    <string name="book_setting_invitation_desc">일기를 같이 쓰고싶은 친구를 초대하세요!</string>
    <string name="book_setting_invitation_button">초대코드 복사하기</string>

    <string name="unknown_error">예상하지 못한 오류가 발생하였습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="wrong_access">잘못된 접근입니다. 다시 시도해주세요.</string>

    <string name="toast_copy_invitation_code">초대코드가 복사되었습니다.</string>

    <string name="header_other_turn_title">%s님 ✍ 작성중!</string>
    <string name="header_othder_turn_desc">본인차례가 되면 작성할 수 있어요</string>
    <string name="header_othder_turn_pinch_count">오늘 재촉 가능 횟수</string>
    <string name="header_othder_turn_pinch">재촉하기</string>
    <string name="pinch_success_toast">%s님이 일기를 쓰도록 재촉했어요!</string>

    <string name="sponsor_title">덕지를 잘 이용하고 계신가요?</string>
    <string name="sponsor_desc">덕지를 잘 쓰고 계시다면 \n서비스 유지를 위해 커피 한잔 값을 후원해 주세요!</string>
    <string name="sponsor_button">덕지팀에게 커피 한 잔 사주기</string>
    <string name="sponsor_select_price_title">후원금액 선택하기</string>
    <string name="sponsor_thank_you">정상적으로 후원되었습니다. 감사합니다.</string>
    <string name="sponsor_error_no_sku">후원 목록을 불러오는데 실패하였습니다.</string>
    <string name="sponsor_error_disconnect">구글 결제 시스템에 연결하지 못했습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="sponsor_error_fail_consume">일부 구매는 실패하였습니다.\n실패한 구매는 구글 정책에 따라 환불됩니다.</string>

</resources>