<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.upf.memorytrace_android.ui.mypage.MypageViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_padding_24"
                android:paddingTop="@dimen/title_spacing_16">

                <TextView
                    android:id="@+id/title_tv"
                    style="@style/GmarketBold24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/title_spacing_16"
                    android:text="@string/mypage_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rect_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_gray_rounded"
                    android:padding="@dimen/title_spacing_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_tv">

                    <TextView
                        android:id="@+id/label_name"
                        style="@style/MypageLabel"
                        android:paddingBottom="@dimen/item_spacing_12"
                        android:text="@string/mypage_name_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_name" />

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/NotoBold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="37dp"
                        android:paddingBottom="@dimen/item_spacing_12"
                        android:text="@{viewModel.name}"
                        app:layout_constraintStart_toEndOf="@id/label_name"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="혜데이" />

                    <TextView
                        android:id="@+id/btn_name_edit"
                        style="@style/NotoBold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mypage_name_edit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label_sns"
                        style="@style/MypageLabel"
                        android:paddingBottom="@dimen/item_spacing_12"
                        android:text="@string/mypage_signup_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_sns" />

                    <TextView
                        android:id="@+id/tv_sns"
                        style="@style/NotoBold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/item_spacing_12"
                        android:text="@{viewModel.sns}"
                        app:layout_constraintStart_toEndOf="@id/label_sns"
                        app:layout_constraintStart_toStartOf="@+id/tv_name"
                        app:layout_constraintTop_toBottomOf="@id/tv_name"
                        tools:text="카카오톡" />

                    <TextView
                        android:id="@+id/label_date"
                        style="@style/MypageLabel"
                        android:text="@string/mypage_signup_date"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_date" />

                    <TextView
                        android:id="@+id/tv_date"
                        style="@style/NotoBold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.date}"
                        app:layout_constraintStart_toEndOf="@id/label_date"
                        app:layout_constraintStart_toStartOf="@+id/tv_sns"
                        app:layout_constraintTop_toBottomOf="@id/tv_sns"
                        tools:text="2021년 3월 30일" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/label_invite"
                    style="@style/MypageLabel"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="@dimen/content_spacing_4"
                    android:text="@string/mypage_invite_code_label"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rect_info" />

                <EditText
                    android:id="@+id/ed_invite"
                    style="@style/NotoRegular12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_spacing_12"
                    android:background="@drawable/rect_gray_rounded"
                    android:hint="@string/mypage_invite_code_hint"
                    android:paddingVertical="10dp"
                    android:paddingStart="@dimen/item_spacing_12"
                    android:paddingEnd="70dp"
                    android:textColorHint="@color/text04"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/btn_invite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_invite" />

                <TextView
                    android:id="@+id/btn_invite"
                    style="@style/NotoBold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_white_rounded_22"
                    android:paddingHorizontal="@dimen/default_padding_24"
                    android:paddingVertical="@dimen/default_spacing_8"
                    android:text="@string/mypage_confirm"
                    android:textColor="@color/text02"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_invite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ed_invite">

                    <TextView
                        android:id="@+id/label_service"
                        style="@style/MypageSectionTitle"
                        android:layout_marginTop="@dimen/section_spacing_40"
                        android:paddingBottom="@dimen/content_spacing_4"
                        android:text="@string/mypage_service_label" />

                    <RelativeLayout
                        android:id="@+id/btn_sponsor"
                        style="@style/MypageItemLayout">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_sponsor" />

                        <ImageView
                            style="@style/ImageView"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_right_arrow" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_current_version"
                        style="@style/MypageItemLayout">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_current_version" />

                        <TextView
                            style="@style/MypageItem"
                            android:layout_alignParentEnd="true"
                            android:text="@{viewModel.version}"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_makers"
                        style="@style/MypageItemLayout"
                        android:onClick="@{()->viewModel.onClickMakers()}">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_makers" />

                        <ImageView
                            style="@style/ImageView"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_open_source"
                        style="@style/MypageItemLayout"
                        android:onClick="@{()->viewModel.onClickOssNotice()}">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_open_source" />

                        <ImageView
                            style="@style/ImageView"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_term_service"
                        style="@style/MypageItemLayout"
                        android:onClick="@{()->viewModel.onClickTermService()}">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_term_service_label" />

                        <ImageView
                            style="@style/ImageView"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_term_privacy"
                        style="@style/MypageItemLayout"
                        android:onClick="@{()->viewModel.onClickTermPrivacy()}">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_term_privacy_label" />

                        <ImageView
                            style="@style/ImageView"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/label_cs"
                        style="@style/MypageSectionTitle"
                        android:layout_marginTop="@dimen/default_padding_24"
                        android:paddingBottom="@dimen/content_spacing_4"
                        android:text="@string/mypage_cs_label" />

                    <RelativeLayout
                        android:id="@+id/btn_theme"
                        style="@style/MypageItemLayout">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_theme" />

                        <ImageView
                            style="@style/ImageView"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_cs"
                        android:onClick="@{()->viewModel.onClickSendEmail()}"
                        style="@style/MypageItemLayout">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_cs" />

                        <ImageView
                            style="@style/ImageView"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_logout"
                        style="@style/MypageItemLayout">

                        <TextView
                            style="@style/MypageItem"
                            android:text="@string/mypage_logout" />

                        <ImageView
                            style="@style/ImageView"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/btn_leave"
                        style="@style/MypageItemLayout"
                        android:gravity="center"
                        android:text="@string/mypage_leave_confirm"
                        android:textColor="@color/text04"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>
