<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    android:backgroundTint="@color/bg02"
    android:background="@drawable/rect_white_top_rounded_10">

    <TextView
        style="@style/GmarketBold18"
        android:layout_width="wrap_content"
        android:textColor="@color/text01"
        android:layout_height="wrap_content"
        android:text="@string/sponsor_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:src="@drawable/ic_crying_duck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sponsor_desc"
        android:textColor="@color/text04" />

    <Button
        android:id="@+id/button_sponsor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rect_white_rounded"
        android:backgroundTint="@color/bg03"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingVertical="13.5dp"
        android:text="@string/sponsor_button"
        android:textColor="@color/text02"
        android:textSize="14dp" />

</LinearLayout>
