<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/btn_create"
                style="@style/NotoRegular16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:paddingHorizontal="@dimen/default_padding_24"
                android:text="@string/create" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/default_padding_24">

            <TextView
                android:id="@+id/title_tv"
                style="@style/GmarketBold24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/title_spacing_16"
                android:text="@string/create_book_section_title" />


            <LinearLayout
                android:id="@+id/item_book"
                android:layout_width="match_parent"
                android:layout_height="@dimen/book_height"
                android:background="@drawable/rect_gray_rounded"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_tv">

                <EditText
                    android:id="@+id/title"
                    style="@style/GmarketBold16"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:hint="@string/write_hint_title"
                    android:maxLength="15"
                    android:paddingStart="@dimen/default_padding_24"
                    android:textColor="@color/systemWhite"
                    android:textColorHint="@color/systemWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/item_book_sticker"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/item_book_sticker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </LinearLayout>

            <TextView
                style="@style/NotoRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_spacing_40"
                android:text="@string/cover_color" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="6"
                tools:listitem="@layout/item_color_list" />
        </LinearLayout>
    </LinearLayout>
</layout>